--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "aws-lambda": "^0.1.2",
     "aws-sdk": "^2.400.0",
+    "class-transformer": "^0.2.3",
     "class-validator": "^0.9.1",
     "pg": "^7.8.0",
     "pluralize": "^7.0.0",
