--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,31 @@
   "compilerOptions": {
     "baseUrl": ".",
     "rootDir": ".",
+    "target": "es2017",
+    "module": "commonjs",
+    "lib": [
+      "es2017"
+    ],
+    "pretty": true,
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": false,
+    "noImplicitAny": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "noUnusedLocals": true,
     "sourceMap": true,
     "removeComments": true,
     "preserveConstEnums": true,
     "strictNullChecks": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "lib": [
-      "esnext"
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "typeRoots": [
+      "./types",
+      "node_modules/@types"
     ],
     "paths": {
       "@shared/*": ["./shared/*"],
